# ivc-hitl-af

./: .env.example  .gitignore  DEMO.md  Dockerfile  Procfile  README.md  app.json  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  setup.py
backend/: celerybeat-schedule  manage.py
backend/core/: TEST_README.md  health.py  models.py  mturk.py  permissions.py  plugin_validation.py  serializers.py  tasks.py  tests.py  ui_urls.py  ui_views.py  urls.py  views.py
backend/core/adapters/mturk/: client.py  templates.py
backend/core/fixtures/: README.md  example_dataset.json
backend/core/management/commands/: load_examples.py  validate_plugins.py
backend/core/migrations/: 0001_initial.py  0002_add_returned_status_and_actor_index.py  0003_add_assigned_to_field.py
backend/core/tests/: test_mturk.py  test_security.py
backend/ivc_hitl_af/: asgi.py  celery.py  cli.py  settings.py  urls.py  wsgi.py
deploy/: upload_plugins.sh
docs/: architecture.md  deployment.md  plugin-guide.md
frontends/example-bbox/: manifest.json
frontends/salient-poly/: index.html  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontends/salient-poly/src/: App.tsx  styles.css
