[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ivc-hitl-af"
version = "0.1.0"
description = "Modular human-in-the-loop annotation framework for image and video datasets"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Lab", email = "lab@university.edu"}
]
keywords = ["annotation", "machine-learning", "computer-vision", "mturk", "crowdsourcing", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
    "Framework :: Celery",
]
requires-python = ">=3.9"
dependencies = [
    "Django>=5.0,<6.0",
    "djangorestframework>=3.15,<4.0",
    "drf-spectacular>=0.28,<1.0",
    "psycopg[binary]>=3.1,<4.0",
    "celery>=5.4,<6.0",
    "redis>=5.0,<6.0",
    "boto3>=1.34,<2.0",
    "python-dotenv>=1.0,<2.0",
    "django-cors-headers>=4.3,<5.0",
    "gunicorn>=22.0,<23.0",
    "django-ratelimit>=4.1,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "black>=23.0",
    "flake8>=6.0",
]

[project.scripts]
ivc-hitl-af = "ivc_hitl_af.cli:main"

[project.urls]
Homepage = "https://github.com/yourlab/ivc-hitl-af"
Documentation = "https://github.com/yourlab/ivc-hitl-af/tree/main/docs"
Repository = "https://github.com/yourlab/ivc-hitl-af"
Issues = "https://github.com/yourlab/ivc-hitl-af/issues"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "ivc_hitl_af.settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["backend/core/tests"]
addopts = "--tb=short --strict-markers"
